Refatora base e index

--- a/backend/core/templates/index.html
+++ b/backend/core/templates/index.html
@@ -16,28 +16,36 @@
   <section class="info-tiles">
     <div class="tile is-ancestor has-text-centered">
       <div class="tile is-parent">
-        <article class="tile is-child box">
+        <a class="tile" href="">
+          <article class="tile is-child box">
           <p class="title">439</p>
           <p class="subtitle">Clientes</p>
         </article>
+        </a>
       </div>
       <div class="tile is-parent">
+        <a class="tile" href="">
         <article class="tile is-child box">
           <p class="title">59</p>
           <p class="subtitle">Serviços</p>
         </article>
+      </a>
       </div>
       <div class="tile is-parent">
+        <a class="tile" href="">
         <article class="tile is-child box">
           <p class="title">5</p>
           <p class="subtitle">Pedidos em Aberto</p>
         </article>
+      </a>
       </div>
       <div class="tile is-parent">
+        <a class="tile" href="">
         <article class="tile is-child box">
           <p class="title">3</p>
           <p class="subtitle">Notas de Comissão em Aberto</p>
         </article>
+      </a>
       </div>
     </div>
   </section>
