Simplifica as listas

--- a/backend/crm/templates/crm/customer_list.html
+++ b/backend/crm/templates/crm/customer_list.html
@@ -49,46 +49,18 @@
               </span>
               <table class="table is-fullwidth is-striped">
                 <tbody>
-                  <tr>
-                    <td width="5%"><i class="fa fa-bell-o"></i></td>
-                    <td>Lorum ipsum dolem aire</td>
-                    <td class="level-right"><a
-                      class="button is-small is-primary"
-                      href="."
-                    >Ações</a></td>
-                  </tr>
-                  <tr>
-                    <td width="5%"><i class="fa fa-bell-o"></i></td>
-                    <td>Lorum ipsum dolem aire</td>
-                    <td class="level-right"><a
-                      class="button is-small is-primary"
-                      href="."
-                    >Ações</a></td>
-                  </tr>
-                  <tr>
-                    <td width="5%"><i class="fa fa-bell-o"></i></td>
-                    <td>Lorum ipsum dolem aire</td>
-                    <td class="level-right"><a
-                      class="button is-small is-primary"
-                      href="."
-                    >Ações</a></td>
-                  </tr>
-                  <tr>
-                    <td width="5%"><i class="fa fa-bell-o"></i></td>
-                    <td>Lorum ipsum dolem aire</td>
-                    <td class="level-right"><a
-                      class="button is-small is-primary"
-                      href="."
-                    >Ações</a></td>
-                  </tr>
-                  <tr>
-                    <td width="5%"><i class="fa fa-bell-o"></i></td>
-                    <td>Lorum ipsum dolem aire</td>
-                    <td class="level-right"><a
-                      class="button is-small is-primary"
-                      href="."
-                    >Ações</a></td>
-                  </tr>
+                  {% for object in object_list %}
+                    <tr>
+                      <td width="5%"><i class="fa fa-bell-o"></i></td>
+                      <td>
+                        <a href="{{ object.get_absolute_url }}">{{ object }}</a>
+                      </td>
+                      <td class="level-right"><a
+                        class="button is-small is-primary"
+                        href="."
+                      >Ações</a></td>
+                    </tr>
+                  {% endfor %}
                 </tbody>
               </table>
             </div>
