--- a/backend/core/templates/includes/nav.html
+++ b/backend/core/templates/includes/nav.html
@@ -18,7 +18,7 @@
       <a href="{% url 'service:service_list' %}">Serviço</a>
     </li>
     <li>
-      <a href="{% url 'service:order_list' %}">Ordem de Compra</a>
+      <a href="{% url 'service:order_list' %}">Pedido</a>
     </li>
   </ul>
   <p class="menu-label">
