--- a/backend/service/templates/service/service_detail.html
+++ b/backend/service/templates/service/service_detail.html
@@ -1,1 +1,65 @@
-service_detail
+{% extends "base.html" %}
+
+{% block content %}
+  <section class="hero is-info welcome is-small">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Serviço
+        </h1>
+        <h2 class="subtitle">
+          Detalhes do Serviço
+        </h2>
+      </div>
+    </div>
+  </section>
+  <div class="columns">
+    <div class="column is-12">
+      <div class="card">
+        <header class="card-header">
+          <p class="card-header-title">
+            Serviço
+          </p>
+          <a
+            href="."
+            class="card-header-icon"
+            aria-label="more options"
+          >
+            <span class="icon">
+              <i
+                class="fa fa-angle-down"
+                aria-hidden="true"
+              ></i>
+            </span>
+          </a>
+        </header>
+        <div class="card-content">
+          <table class="table">
+            <tbody>
+              <tr>
+                <td class="has-text-right">Campo:</td>
+                <td>{{ object }}</td>
+              </tr>
+              <tr>
+                <td class="has-text-right">Campo:</td>
+                <td>Lorum ipsum dolem aire</td>
+              </tr>
+              <tr>
+                <td class="has-text-right">Campo:</td>
+                <td>Lorum ipsum dolem aire</td>
+              </tr>
+              <tr>
+                <td class="has-text-right">Campo:</td>
+                <td>Lorum ipsum dolem aire</td>
+              </tr>
+              <tr>
+                <td class="has-text-right">Campo:</td>
+                <td>Lorum ipsum dolem aire</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock content %}
