--- a/backend/service/templates/service/order_form.html
+++ b/backend/service/templates/service/order_form.html
@@ -1,1 +1,75 @@
-order_form
+{% extends "base.html" %}
+{% load widget_tweaks %}
+
+{% block content %}
+  <section class="hero is-info welcome is-small">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Pedido
+        </h1>
+        <h2 class="subtitle">
+          Adiciona Pedido
+        </h2>
+      </div>
+    </div>
+  </section>
+  <div class="columns">
+    <div class="column is-12">
+      <div class="card">
+        <header class="card-header">
+          <p class="card-header-title">
+            Pedido
+          </p>
+          <a
+            href="."
+            class="card-header-icon"
+            aria-label="more options"
+          >
+            <span class="icon">
+              <i
+                class="fa fa-angle-down"
+                aria-hidden="true"
+              ></i>
+            </span>
+          </a>
+        </header>
+        <div class="card-content">
+          <form action="." method="POST">
+            {% csrf_token %}
+
+            {% for field in form.visible_fields %}
+              <div class="field">
+                <label class="label">{{ field.label }}</label>
+                <div class="control">
+                  {% render_field field class="input" %}
+                </div>
+                {% for error in field.errors %}
+                  <p class="help is-danger">{{ error }}</p>
+                {% endfor %}
+              </div>
+            {% endfor %}
+
+            <div class="field is-grouped">
+              <div class="control">
+                <button class="button is-link">Salvar</button>
+              </div>
+              <div class="control">
+                <button class="button is-link is-light">Cancelar</button>
+              </div>
+            </div>
+
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock content %}
+
+{% block js %}
+  <script>
+    $(document).ready(function(){
+      $('#id_paid').removeClass('input');
+    });
+  </script>
+{% endblock js %}
