Ajustes das listas

--- a/backend/core/templates/base.html
+++ b/backend/core/templates/base.html
@@ -52,6 +52,11 @@
         </div>
       </div>
     </div>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    {% block js %}{% endblock js %}
   </body>
 
 </html>
