--- a/backend/financial/templates/financial/comissionnote_list.html
+++ b/backend/financial/templates/financial/comissionnote_list.html
@@ -19,6 +19,7 @@
         <header class="card-header">
           <p class="card-header-title">
             Notas de Comissão
+            <a class="button is-small is-info ml-3" href="{% url 'financial:comission_note_create' %}">Adicionar</a>
           </p>
           <a
             href="."
@@ -51,7 +52,7 @@
                 <tbody>
                   {% for object in object_list %}
                     <tr>
-                      <td width="5%"><i class="fa fa-bell-o"></i></td>
+                      <td width="5%"><i class="fa fa-bell"></i></td>
                       <td>
                         <a href="{{ object.get_absolute_url }}">{{ object }}</a>
                       </td>
